--- a/login.html
+++ b/login.html
@@ -1,14 +1,38 @@
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>تسجيل الدخول - نظام OMA</title>
+<style>
+:root { --primary:#004aad; --bg:#f5f9ff; --card:#fff; }
+body { margin:0; font-family:'Cairo',sans-serif; background: var(--bg); height:100vh; display:flex; justify-content:center; align-items:center; }
+.login-box { background:var(--card); padding:40px; border-radius:12px; box-shadow:0 6px 20px rgba(0,0,0,0.1); text-align:center; width:320px; }
+h2 { margin-bottom:25px; color:var(--primary); }
+input { width:100%; padding:12px; margin-bottom:15px; border-radius:8px; border:1px solid #ccc; font-size:15px; }
+button { background:var(--primary); color:white; border:none; padding:12px; width:100%; border-radius:8px; font-size:16px; cursor:pointer; transition:0.3s; }
+button:hover { background:#003a8c; }
+.error { color:red; font-size:14px; margin-bottom:10px; }
+footer { position:fixed; bottom:10px; width:100%; text-align:center; color:#888; font-size:13px; }
+</style>
+</head>
+<body>
+  <div class="login-box">
+    <h2>تسجيل الدخول 🔐</h2>
+    <p class="error" id="errorMsg"></p>
+    <input type="email" id="email" placeholder="البريد الإلكتروني" required />
+    <input type="password" id="password" placeholder="كلمة المرور" required />
+    <button id="loginBtn">دخول</button>
+  </div>
+
+  <footer>© 2025 نظام OMA - جميع الحقوق محفوظة</footer>
+
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-import { 
-  getAuth, 
-  signInWithEmailAndPassword,
-  onAuthStateChanged
-} from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-
+import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
-// إعداد Firebase
+// 🔹 إعداد Firebase
 const firebaseConfig = {
   apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
   authDomain: "oma0-33cc0.firebaseapp.com",
@@ -28,18 +52,20 @@ const passwordInput = document.getElementById("password");
 const loginBtn = document.getElementById("loginBtn");
 const errorMsg = document.getElementById("errorMsg");
 
-// تحقق إذا المستخدم مسجل دخول مسبقاً
+// ✅ تحقق إذا المستخدم مسجل دخول مسبقاً
 onAuthStateChanged(auth, async (user) => {
   if (user) {
-    redirectByRole(user.uid);
+    const userDoc = await getDoc(doc(db, "users", user.uid));
+    if (!userDoc.exists()) return;
+    const userData = userDoc.data();
+    redirectUser(userData.type);
   }
 });
 
-// تسجيل الدخول
+// 🎯 تسجيل الدخول
 loginBtn.addEventListener("click", async () => {
   const email = emailInput.value.trim();
   const password = passwordInput.value.trim();
-
   if (!email || !password) {
     errorMsg.textContent = "الرجاء إدخال البريد الإلكتروني وكلمة المرور.";
     return;
@@ -52,43 +78,27 @@ loginBtn.addEventListener("click", async () => {
   try {
     const userCred = await signInWithEmailAndPassword(auth, email, password);
     const uid = userCred.user.uid;
-    redirectByRole(uid);
+    const userDoc = await getDoc(doc(db, "users", uid));
+    if (!userDoc.exists()) throw new Error("المستخدم غير موجود في قاعدة البيانات.");
+    const userData = userDoc.data();
+    redirectUser(userData.type);
   } catch (error) {
     loginBtn.disabled = false;
     loginBtn.textContent = "دخول";
     errorMsg.style.color = "red";
-    if (error.code === "auth/user-not-found") {
-      errorMsg.textContent = "المستخدم غير موجود.";
-    } else if (error.code === "auth/wrong-password") {
-      errorMsg.textContent = "كلمة المرور غير صحيحة.";
-    } else {
-      errorMsg.textContent = "حدث خطأ أثناء تسجيل الدخول.";
-    }
+    if (error.code === "auth/user-not-found") errorMsg.textContent = "المستخدم غير موجود.";
+    else if (error.code === "auth/wrong-password") errorMsg.textContent = "كلمة المرور غير صحيحة.";
+    else errorMsg.textContent = "حدث خطأ أثناء تسجيل الدخول.";
+    console.error(error);
   }
 });
 
-// دالة لإعادة التوجيه حسب نوع المستخدم
-async function redirectByRole(uid) {
-  try {
-    const userDoc = await getDoc(doc(db, "users", uid));
-    if (!userDoc.exists()) throw new Error("المستخدم غير موجود في قاعدة البيانات");
-
-    const userData = userDoc.data();
-    const role = userData.type;
-
-    if (role === "admin") {
-      window.location.href = "dashboard.html";
-    } else if (role === "teacher") {
-      window.location.href = "teacher-dashboard.html";
-    } else if (role === "student") {
-      window.location.href = "student-dashboard.html";
-    } else {
-      throw new Error("نوع المستخدم غير معروف");
-    }
-  } catch (err) {
-    console.error(err);
-    errorMsg.style.color = "red";
-    errorMsg.textContent = "تعذّر تحديد نوع المستخدم.";
-  }
+// 🔹 توجيه المستخدم حسب النوع
+function redirectUser(type) {
+  if (type === "student") window.location.href = "student-dashboard.html";
+  else if (type === "teacher") window.location.href = "teacher-dashboard.html";
+  else window.location.href = "dashboard.html"; // admin
 }
 </script>
+</body>
+</html>
