--- a/settings.html
+++ b/settings.html
@@ -3,30 +3,86 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>نظام OMA - الإعدادات</title>
+<title>إعدادات المعهد</title>
 <style>
+:root{
+  --primary:#004aad;
+  --accent:#ffcc33;
+}
 body{font-family:'Cairo',sans-serif;direction:rtl;margin:0;background:#f5f9ff;color:#102027;}
-header{background:#004aad;color:#fff;padding:18px;text-align:center;font-size:20px;font-weight:700;}
+header{display:flex;align-items:center;gap:12px;background:var(--primary);color:#fff;padding:12px 18px;font-size:20px;font-weight:700;cursor:pointer;}
+header img{height:40px;border-radius:5px;}
 .wrap{max-width:1200px;margin:22px auto;padding:12px;}
 .card{background:#fff;border-radius:10px;padding:14px;margin-bottom:16px;box-shadow:0 6px 18px rgba(6,20,30,0.06);}
 input, select{padding:10px;border:1px solid #d6dde9;border-radius:8px;font-size:15px;width:100%;margin-bottom:8px;}
 label{display:block;margin-bottom:6px;font-size:13px;color:#37474f;}
-.btn{background:#004aad;color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700;margin-bottom:8px;}
+.btn{background:var(--primary);color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700;margin-bottom:8px;}
 .btn.warn{background:#ff7043;}
-.btn.ghost{background:transparent;color:#004aad;border:1px solid #004aad;}
+.btn.ghost{background:transparent;color:var(--primary);border:1px solid var(--primary);}
 .table-container{overflow-x:auto;}
 table{width:100%;border-collapse:collapse;margin-top:12px;}
 th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px;}
-th{background:#004aad;color:#fff;}
+th{background:var(--primary);color:#fff;}
 .filters{display:flex;gap:10px;flex-wrap:wrap;margin-bottom:12px;}
-.filters select{flex:1;}
+.filters input, .filters select{flex:1;}
+.social-icons{display:flex;gap:10px;margin-top:8px;}
+.social-icons a img{height:28px;}
+.color-input{display:flex;gap:8px;align-items:center;margin-bottom:8px;}
 </style>
 </head>
 <body>
-<header>نظام OMA - الإعدادات</header>
+
+<header id="header">
+  <img id="instituteLogo" src="" alt="شعار المعهد">
+  <span id="instituteName">اسم المعهد</span>
+</header>
+
 <div class="wrap">
 
-<!-- إعدادات النسب -->
+<!-- معلومات المعهد -->
+<div class="card">
+  <strong>معلومات المعهد</strong>
+  <label>اسم المعهد</label>
+  <input type="text" id="instituteNameInput" placeholder="مثال: معهد X">
+  <label>الشعار (رابط الصورة)</label>
+  <input type="text" id="instituteLogoInput" placeholder="رابط الشعار">
+  <label>العنوان</label>
+  <input type="text" id="instituteAddress" placeholder="مثال: بغداد - العراق">
+  <label>رقم الهاتف</label>
+  <input type="text" id="institutePhone" placeholder="مثال: 07701234567">
+  <label>البريد الإلكتروني</label>
+  <input type="email" id="instituteEmail" placeholder="مثال: info@x.com">
+  <button class="btn" id="saveInstituteInfoBtn">💾 حفظ معلومات المعهد</button>
+</div>
+
+<!-- وسائل التواصل -->
+<div class="card">
+  <strong>وسائل التواصل الاجتماعي</strong>
+  <div id="socialInputs">
+    <label>فيسبوك</label><input type="text" id="facebookLink" placeholder="رابط فيسبوك">
+    <label>إنستغرام</label><input type="text" id="instagramLink" placeholder="رابط إنستغرام">
+    <label>تيك توك</label><input type="text" id="tiktokLink" placeholder="رابط تيك توك">
+    <label>تليجرام</label><input type="text" id="telegramLink" placeholder="رابط تليجرام">
+  </div>
+  <div class="social-icons" id="socialDisplay"></div>
+  <button class="btn" id="saveSocialBtn">💾 حفظ روابط التواصل</button>
+</div>
+
+<!-- تخصيص الألوان -->
+<div class="card">
+  <strong>تخصيص ألوان المعهد</strong>
+  <div class="color-input">
+    <label>اللون الأساسي:</label>
+    <input type="color" id="primaryColor">
+  </div>
+  <div class="color-input">
+    <label>اللون الثانوي:</label>
+    <input type="color" id="accentColor">
+  </div>
+  <button class="btn" id="saveColorsBtn">💾 حفظ الألوان</button>
+</div>
+
+<!-- إعداد النسب -->
 <div class="card">
   <strong>إعداد نسبة الأستاذ والمعهد</strong>
   <label>نسبة الأستاذ (%)</label>
@@ -36,29 +92,25 @@ th{background:#004aad;color:#fff;}
   <button class="btn" id="savePercentBtn">💾 حفظ النسب</button>
 </div>
 
-<!-- إنشاء مستخدم -->
+<!-- إدارة الفروع -->
 <div class="card">
-  <strong>إضافة مستخدم جديد</strong>
-  <form id="userForm">
-    <label>نوع المستخدم</label>
-    <select id="userType">
-      <option value="student">طالب</option>
-      <option value="teacher">أستاذ</option>
-    </select>
-    <label>الاسم</label>
-    <select id="userName"><option value="">اختر الاسم</option></select>
-    <label>البريد الإلكتروني</label>
-    <input type="email" id="userEmail" required>
-    <label>كلمة المرور</label>
-    <input type="password" id="userPassword" required>
-    <button type="submit" class="btn">✅ إنشاء المستخدم</button>
-  </form>
+  <strong>إدارة الفروع</strong>
+  <label>إضافة فرع جديد</label>
+  <input type="text" id="newBranch" placeholder="اسم الفرع">
+  <button class="btn" id="addBranchBtn">➕ إضافة فرع</button>
+  <div class="table-container">
+    <table id="branchesTable">
+      <thead><tr><th>اسم الفرع</th><th>خيارات</th></tr></thead>
+      <tbody></tbody>
+    </table>
+  </div>
 </div>
 
-<!-- قائمة المستخدمين -->
+<!-- إدارة المستخدمين -->
 <div class="card">
-  <strong>قائمة المستخدمين</strong>
+  <strong>المستخدمون (طلاب وأساتذة)</strong>
   <div class="filters">
+    <input type="text" id="searchUser" placeholder="بحث بالاسم...">
     <select id="filterType"><option value="">فلترة حسب النوع</option><option value="student">طالب</option><option value="teacher">أستاذ</option></select>
   </div>
   <div class="table-container">
@@ -74,107 +126,212 @@ th{background:#004aad;color:#fff;}
 <script type="module">
 // 🔹 Firebase إعداد
 import { db, auth } from "./firebase-config.js";
-import { createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-import { setDoc, doc, collection, getDocs } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+import { setDoc, doc, collection, getDocs, deleteDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
-// ----- تحميل أسماء الطلاب والأساتذة من Firestore -----
-async function fetchNames() {
-  const studentsSnapshot = await getDocs(collection(db,"students"));
-  const teachersSnapshot = await getDocs(collection(db,"teachers"));
-  return {
-    students: studentsSnapshot.docs.map(d=>d.data().name),
-    teachers: teachersSnapshot.docs.map(d=>d.data().name)
-  };
-}
-
-let allNames = {students:[], teachers:[]};
-async function updateNames(){
-  const type = userTypeSelect.value;
-  userNameSelect.innerHTML = "<option value=''>اختر الاسم</option>";
-  let names = type==="student"?allNames.students:allNames.teachers;
-  names.forEach(n=>userNameSelect.innerHTML += `<option value="${n}">${n}</option>`);
-}
-
-// ----- عناصر الصفحة -----
-const userTypeSelect = document.getElementById("userType");
-const userNameSelect = document.getElementById("userName");
-const usersTableBody = document.querySelector("#usersTable tbody");
-
-// ----- تحميل البيانات عند البداية -----
-async function init() {
-  allNames = await fetchNames();
-  updateNames();
-}
-init();
-userTypeSelect.addEventListener("change", updateNames);
-
-// ----- تخزين المستخدمين مؤقتاً لعرضهم -----
-let usersData = [];
-
-// ----- إنشاء مستخدم جديد -----
-document.getElementById("userForm").addEventListener("submit", async e=>{
-  e.preventDefault();
-  const type = userTypeSelect.value;
-  const name = userNameSelect.value;
-  const email = document.getElementById("userEmail").value.trim();
-  const password = document.getElementById("userPassword").value.trim();
-  if(!type || !name || !email || !password){alert("اكمل جميع الحقول"); return;}
-
-  try{
-    const userCred = await createUserWithEmailAndPassword(auth,email,password);
-    const uid = userCred.user.uid;
-    await setDoc(doc(db,"users",uid), {name,type,email,teacherPercent:0,createdAt:new Date().toISOString()});
-    usersData.push({id:uid,type,name,email});
-    renderUsers();
-    e.target.reset();
-    updateNames();
-    alert("✅ تم إنشاء المستخدم بنجاح!");
-  }catch(err){console.error(err);alert("❌ حدث خطأ: "+err.message);}
+// ----- تحقق تسجيل الدخول -----
+onAuthStateChanged(auth, user=>{
+  if(!user){
+    alert("⚠️ يجب تسجيل الدخول للمتابعة");
+    window.location.href="login.html"; // رابط صفحة تسجيل الدخول
+  }else{
+    initPage();
+  }
 });
 
-// ----- عرض المستخدمين -----
-function renderUsers(){
-  const filter = document.getElementById("filterType").value;
-  usersTableBody.innerHTML="";
-  usersData.filter(u=>!filter||u.type===filter).forEach(u=>{
+// ----- عناصر الصفحة -----
+const header = document.getElementById("header");
+const instituteLogoImg = document.getElementById("instituteLogo");
+const instituteNameSpan = document.getElementById("instituteName");
+
+// معلومات المعهد
+const nameInput = document.getElementById("instituteNameInput");
+const logoInput = document.getElementById("instituteLogoInput");
+const addressInput = document.getElementById("instituteAddress");
+const phoneInput = document.getElementById("institutePhone");
+const emailInput = document.getElementById("instituteEmail");
+const saveInstituteBtn = document.getElementById("saveInstituteInfoBtn");
+
+// وسائل التواصل
+const socialInputs = {
+  facebook: document.getElementById("facebookLink"),
+  instagram: document.getElementById("instagramLink"),
+  tiktok: document.getElementById("tiktokLink"),
+  telegram: document.getElementById("telegramLink")
+};
+const socialDisplay = document.getElementById("socialDisplay");
+const saveSocialBtn = document.getElementById("saveSocialBtn");
+
+// الألوان
+const primaryColorInput = document.getElementById("primaryColor");
+const accentColorInput = document.getElementById("accentColor");
+const saveColorsBtn = document.getElementById("saveColorsBtn");
+
+// النسب
+const teacherPercentInput = document.getElementById("teacherPercent");
+const institutePercentInput = document.getElementById("institutePercent");
+const savePercentBtn = document.getElementById("savePercentBtn");
+
+// الفروع
+const newBranchInput = document.getElementById("newBranch");
+const addBranchBtn = document.getElementById("addBranchBtn");
+const branchesTableBody = document.querySelector("#branchesTable tbody");
+let branchesData = [];
+
+// المستخدمون
+const usersTableBody = document.querySelector("#usersTable tbody");
+const searchUserInput = document.getElementById("searchUser");
+const filterTypeSelect = document.getElementById("filterType");
+let usersData = [];
+
+// ----- وظائف الصفحة -----
+async function initPage(){
+  await loadInstituteInfo();
+  await loadSocial();
+  await loadUsers();
+  await loadBranches();
+  applyColors();
+
+  // معاينة الشعار والاسم مباشرة
+  logoInput.addEventListener("input",()=>{instituteLogoImg.src=logoInput.value;});
+  nameInput.addEventListener("input",()=>{instituteNameSpan.textContent=nameInput.value;});
+  for(const [key,input] of Object.entries(socialInputs)){input.addEventListener("input", renderSocial);}
+}
+
+// تحميل بيانات المعهد
+async function loadInstituteInfo(){
+  try{
+    const docRef = doc(db,"settings","info");
+    const docSnap = await getDocs(collection(db,"settings"));
+    // يمكن إضافة الكود لتحميل info موجود من Firestore
+  }catch(err){console.warn(err);}
+}
+
+// حفظ معلومات المعهد
+saveInstituteBtn.addEventListener("click",async()=>{
+  await setDoc(doc(db,"settings","info"),{
+    name:nameInput.value,
+    logo:logoInput.value,
+    address:addressInput.value,
+    phone:phoneInput.value,
+    email:emailInput.value
+  });
+  alert("✅ تم حفظ معلومات المعهد");
+});
+
+// وظائف التواصل
+async function loadSocial(){
+  renderSocial();
+}
+function renderSocial(){
+  socialDisplay.innerHTML="";
+  for(const [key,input] of Object.entries(socialInputs)){
+    if(input.value){
+      const a = document.createElement("a");
+      a.href = input.value;
+      a.target="_blank";
+      const img = document.createElement("img");
+      img.src=`./icons/${key}.svg`;
+      a.appendChild(img);
+      socialDisplay.appendChild(a);
+    }
+  }
+}
+saveSocialBtn.addEventListener("click",async()=>{
+  const data = {};
+  for(const [key,input] of Object.entries(socialInputs)){data[key]=input.value;}
+  await setDoc(doc(db,"settings","social"),data);
+  alert("✅ تم حفظ الروابط");
+});
+
+// الألوان
+function applyColors(){
+  document.documentElement.style.setProperty("--primary",primaryColorInput.value);
+  document.documentElement.style.setProperty("--accent",accentColorInput.value);
+}
+primaryColorInput.addEventListener("input",applyColors);
+accentColorInput.addEventListener("input",applyColors);
+saveColorsBtn.addEventListener("click",async()=>{
+  await setDoc(doc(db,"settings","colors"),{primary:primaryColorInput.value,accent:accentColorInput.value});
+  alert("✅ تم حفظ الألوان");
+});
+
+// النسب
+savePercentBtn.addEventListener("click",async()=>{
+  const t = parseFloat(teacherPercentInput.value)||0;
+  const i = parseFloat(institutePercentInput.value)||0;
+  if(t+i!==100){alert("مجموع النسب يجب أن يكون 100%"); return;}
+  await setDoc(doc(db,"settings","percentages"),{teacher:t,institute:i});
+  alert(`✅ تم حفظ النسب: الأستاذ ${t}% - المعهد ${i}%`);
+});
+
+// الفروع
+async function loadBranches(){
+  try{
+    const docRef = doc(db,"settings","branches");
+    // تحميل branchesData من Firestore
+  }catch(err){console.warn(err);}
+}
+function renderBranches(){
+  branchesTableBody.innerHTML="";
+  branchesData.forEach((b,i)=>{
     const tr = document.createElement("tr");
-    tr.innerHTML = `<td>${u.name}</td><td>${u.type}</td><td>${u.email}</td>
-    <td>
-      <button class="btn small" onclick="editUser('${u.id}')">✏️ تعديل</button>
-      <button class="btn warn small" onclick="deleteUser('${u.id}')">🗑️ حذف</button>
-    </td>`;
+    tr.innerHTML=`<td>${b}</td><td><button class="btn warn" onclick="deleteBranch(${i})">🗑️ حذف</button></td>`;
+    branchesTableBody.appendChild(tr);
+  });
+}
+addBranchBtn.addEventListener("click",async()=>{
+  if(!newBranchInput.value) return;
+  branchesData.push(newBranchInput.value);
+  await setDoc(doc(db,"settings","branches"),{list:branchesData});
+  renderBranches();
+  newBranchInput.value="";
+});
+window.deleteBranch = async function(i){
+  if(confirm("هل تريد حذف هذا الفرع؟")){
+    branchesData.splice(i,1);
+    await setDoc(doc(db,"settings","branches"),{list:branchesData});
+    renderBranches();
+  }
+}
+
+// المستخدمون
+async function loadUsers(){
+  const studentsSnap = await getDocs(collection(db,"students"));
+  const teachersSnap = await getDocs(collection(db,"teachers"));
+  usersData = [];
+  studentsSnap.forEach(s=>usersData.push({id:s.id,type:"student",name:s.data().name,email:s.data().email||""}));
+  teachersSnap.forEach(t=>usersData.push({id:t.id,type:"teacher",name:t.data().name,email:t.data().email||""}));
+  renderUsers();
+}
+function renderUsers(){
+  const search = searchUserInput.value.toLowerCase();
+  const filter = filterTypeSelect.value;
+  usersTableBody.innerHTML="";
+  usersData.filter(u=>(!filter||u.type===filter)&&(!search||u.name.toLowerCase().includes(search)))
+  .forEach(u=>{
+    const tr = document.createElement("tr");
+    tr.innerHTML=`<td>${u.name}</td><td>${u.type}</td><td>${u.email}</td>
+      <td>
+        <button class="btn warn" onclick="deleteUser('${u.id}','${u.type}')">🗑️ حذف</button>
+      </td>`;
     usersTableBody.appendChild(tr);
   });
 }
-
-// ----- حذف مستخدم -----
-function deleteUser(id){
+window.deleteUser = async function(id,type){
   if(confirm("هل تريد حذف المستخدم؟")){
+    if(type==="student") await deleteDoc(doc(db,"students",id));
+    else if(type==="teacher") await deleteDoc(doc(db,"teachers",id));
     usersData = usersData.filter(u=>u.id!==id);
     renderUsers();
   }
 }
+searchUserInput.addEventListener("input", renderUsers);
+filterTypeSelect.addEventListener("change", renderUsers);
 
-// ----- تعديل مستخدم -----
-function editUser(id){
-  const user = usersData.find(u=>u.id===id);
-  if(!user) return;
-  userTypeSelect.value = user.type;
-  updateNames();
-  userNameSelect.value = user.name;
-  document.getElementById("userEmail").value = user.email;
-  usersData = usersData.filter(u=>u.id!==id);
-}
+// العودة للوحة التحكم عند الضغط على الرأس
+header.addEventListener("click",()=>{window.location.href="dashboard.html";});
 
-// ----- حفظ نسب الأستاذ والمعهد -----
-document.getElementById("savePercentBtn").addEventListener("click", async ()=>{
-  const tPercent = parseFloat(document.getElementById("teacherPercent").value) || 0;
-  const iPercent = parseFloat(document.getElementById("institutePercent").value) || 0;
-  if(tPercent + iPercent !== 100){ alert("مجموع النسب يجب أن يكون 100%"); return; }
-
-  await setDoc(doc(db,"settings","percentages"), {teacher:tPercent,institute:iPercent});
-  alert(`✅ تم حفظ النسب: الأستاذ ${tPercent}% - المعهد ${iPercent}%`);
-});
 </script>
 </body>
 </html>
